syntax = "proto3";

package user.auth;

message C2S_Login {
  string account = 1;
}

message S2C_Login {
	int code = 1;
	string message = 2;
}
